added ray-sphere intersection explanation
Signed-off-by: Dan Tumaykin <d.tumaykin@gmail.com>

--- a/vs/project0.vcxproj
+++ b/vs/project0.vcxproj
@@ -67,10 +67,12 @@
   <ItemGroup>
     <ClCompile Include="..\src\config.cpp" />
     <ClCompile Include="..\src\main.cpp" />
+    <ClCompile Include="..\src\tracer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\config.h" />
     <ClInclude Include="..\src\structures.h" />
+    <ClInclude Include="..\src\tracer.h" />
     <ClInclude Include="..\src\util.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
