--- a/vs/project0.vcxproj
+++ b/vs/project0.vcxproj
@@ -66,11 +66,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\src\config.cpp" />
+    <ClCompile Include="..\src\easybmp\EasyBMP.cpp" />
     <ClCompile Include="..\src\main.cpp" />
     <ClCompile Include="..\src\tracer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\config.h" />
+    <ClInclude Include="..\src\easybmp\EasyBMP.h" />
+    <ClInclude Include="..\src\easybmp\EasyBMP_BMP.h" />
+    <ClInclude Include="..\src\easybmp\EasyBMP_DataStructures.h" />
+    <ClInclude Include="..\src\easybmp\EasyBMP_VariousBMPutilities.h" />
     <ClInclude Include="..\src\structures.h" />
     <ClInclude Include="..\src\tracer.h" />
     <ClInclude Include="..\src\util.h" />
