--- a/bin/config.cfg
+++ b/bin/config.cfg
@@ -1,7 +1,16 @@
-reso 800 600
-size 800 600
-sphr 350 300 50 100 1
-sphr 450 300 100 100 2
-lght 0 240 -100
-matr 1 1 1 0 0.2 0.2 0.2
-matr 2 1 0 1 0.2 0.2 0.2
+reso 1600 1200
+size 1600 1200
+sphr 700 400 -150 120 1
+sphr 900 600 -200 100 2
+sphr 400 450 -200 75 2
+sphr 800 500 100 250 4
+plne 0 1 0.28 -900 4
+plne 0 -0.3 1 -700 4
+plne 0 0 1 -800 4
+plne 1 0 -0.3 0 4
+plne 1 0 0.3 -1600 4
+lght 400 600 -400
+matr 1 0.37 0.7 0 1 0.5 0.2
+matr 2 1 0 1 0.8 0.5 0.2
+matr 3 1 1 1 1 0.1 0.2
+matr 4 0.3 0.3 0.3 0.8 0.5 0.2
