load AA value from config
Signed-off-by: Dan Tumaykin <d.tumaykin@gmail.com>

--- a/vs/config.cfg
+++ b/vs/config.cfg
@@ -1,11 +1,12 @@
 reso 1600 1200
 size 1600 1200
+aamx 2
 sphr 700 400 -150 120 1
 sphr 900 600 -200 100 2
 sphr 400 450 -200 75 2
-sphr 800 600 100 250 4
-plne 0 1 0.5 -700 4
-plne 0 0.5 1 -800 4
+sphr 800 500 100 250 4
+plne 0 1 0.28 -900 4
+plne 0 -0.3 1 -700 4
 plne 0 0 1 -800 4
 plne 1 0 -0.3 0 4
 plne 1 0 0.3 -1600 4
@@ -13,4 +14,4 @@ lght 400 600 -400
 matr 1 0.37 0.7 0 1 0.5 0.2
 matr 2 1 0 1 0.8 0.5 0.2
 matr 3 1 1 1 1 0.1 0.2
-matr 4 0.3 0.3 0.3 1 0.5 0.2
+matr 4 0.3 0.3 0.3 0.8 0.5 0.2
