--- a/bin/config.cfg
+++ b/bin/config.cfg
@@ -11,6 +11,7 @@ plne 0 -0.3 1 -700 4
 plne 0 0 1 -800 4
 plne 1 0 -0.3 0 4
 plne 1 0 0.3 -1600 4
+poly 600 300 -300 800 600 -250 700 650 -300 1
 lght 400 600 -400
 matr 1 0.37 0.7 0 1 0.5 0.2
 matr 2 1 0 1 0.8 0.5 0.2
