--- a/vs/config.cfg
+++ b/vs/config.cfg
@@ -1,5 +1,5 @@
-reso 1600 1200
-size 1600 1200
+reso 1680 1080
+size 1680 1080
 aamx 2
 maxt 6000
 sphr 700 400 -150 120 1
@@ -11,6 +11,7 @@ plne 0 -0.3 1 -700 4
 plne 0 0 1 -800 4
 plne 1 0 -0.3 0 4
 plne 1 0 0.3 -1600 4
+poly 600 300 -300 800 600 -250 700 650 -300 1
 lght 400 600 -400
 matr 1 0.37 0.7 0 1 0.5 0.2
 matr 2 1 0 1 0.8 0.5 0.2
